# atool-rs

./: Cargo.toml  LICENSE  Makefile  README.md
src/: archives.rs  helpers.rs  main.rs  option.rs  ra_error.rs
src/archives/: archive.rs  tar_util.rs  tarbz2.rs  targz.rs  tarlzma.rs  tarlzop.rs  tarxz.rs  test_util.rs
tests/resource/: test_dir.7z  test_dir.tar.bz2
tests/resource/test_dir/: README.md  man_file
