[package]
name = "ratool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
clap = "3.0.0-beta.4"
tempfile = "3"
fs_extra = "1.2"
glob = "0.3"
log = "0.4"
env_logger = "0.9"
